# facturation-app-tauri

./: README.md
facturation-tauri/: index.html  package-lock.json  package.json  vite.config.js
facturation-tauri/src/: App.jsx  index.css
facturation-tauri/src-tauri/: 2  Cargo.toml  tauri.conf.json
facturation-tauri/src-tauri/capabilities/: default.json
facturation-tauri/src-tauri/src/: db.rs  error.rs  main.rs  models.rs
facturation-tauri/src/components/: Modal.jsx  PaginationControls.jsx
facturation-tauri/src/components/facturation/: FactureForm.jsx  FacturePDF.jsx
facturation-tauri/src/components/modal/: ConfirmationModal.jsx
facturation-tauri/src/components/theme/: StyleControls.jsx  ThemeEditor.jsx
facturation-tauri/src/pages/: Facturation.jsx  Settings.jsx  Theme.jsx
facturation-tauri/src/services/: numberToWords.js
